--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,56 @@ body {
      max-width: 1172px;
 }
 
+.forgot{
+     text-align: right;
+     color: #301e64;
+     position: relative;
+     left: 73%;
+     top: -10%;
+}
+
+.signup{
+color: #301e64;
+margin-top: 15px;
+margin-left: 10px;
+}
+
+.signup a {
+     color: #fbca47;
+     }
+
+.google{
+     justify-content: center;
+     display: flex;
+     padding: 0 30px;
+     margin-bottom: 40px;
+     width: 100%;
+     height: 57px;
+     background: #fff;
+     color: black;
+     font-size: 18px;
+     font-weight: normal;
+     border: #ccc8da solid 1px;
+     border-radius: 30px;
+} 
+
+.google p{
+     margin-left: 10px;
+}
+.hehas{
+     position: relative;
+     left: 70%;
+}
+.hehas p{
+color: #000;
+}
+
+.hehas a{
+     color: #fbca47;
+     }
+
+    
+
 a {
      color: #1f1f1f;
      text-decoration: none !important;
@@ -382,14 +432,14 @@ ul.btn li:last-child {
 }
 
 .text-bg span {
-     color: #fbca47;
+     color: #301e64;
      font-weight: bold;
      font-size: 40px;
      line-height: 50px;
 }
 
 .text-bg h1 {
-     color: #050505;
+     color: #301e64;
      font-size: 66px;
      line-height: 70px;
      padding-bottom: 35px;
@@ -501,7 +551,7 @@ ul.btn li:last-child {
      width: 100%;
      color: #fff !important;
      display: block;
-     border-radius: 7px;
+     border-radius: 15px;
      font-weight: 400;
      line-height: 20px;
      text-align: center;
